--- a/client/style.css
+++ b/client/style.css
@@ -56,7 +56,7 @@ header {
 
 .logo-container {
     --logo-size: 120px;
-    --blood-scale: 1.8;
+    --blood-scale: 1.35;
     margin-bottom: 20px;
     position: relative;
     display: inline-flex;
@@ -69,9 +69,7 @@ header {
 .logo-container::before {
     content: '';
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: -7px;
     width: calc(var(--logo-size) * var(--blood-scale));
     height: calc(var(--logo-size) * var(--blood-scale));
     background-image: url('img/coulee_de_sang_rond.png');
