--- a/client/style.css
+++ b/client/style.css
@@ -47,6 +47,29 @@ body {
     }
 }
 
+@keyframes shake {
+    0%, 100% { transform: translate(0, 0) rotate(0deg); }
+    10% { transform: translate(-2px, -1px) rotate(-1deg); }
+    20% { transform: translate(2px, 1px) rotate(1deg); }
+    30% { transform: translate(-2px, 1px) rotate(-1deg); }
+    40% { transform: translate(2px, -1px) rotate(1deg); }
+    50% { transform: translate(-2px, -1px) rotate(-1deg); }
+    60% { transform: translate(2px, 1px) rotate(1deg); }
+    70% { transform: translate(-2px, 1px) rotate(-1deg); }
+    80% { transform: translate(2px, -1px) rotate(1deg); }
+    90% { transform: translate(-2px, -1px) rotate(-1deg); }
+}
+
+.shake-animation {
+    animation: shake 0.5s ease-in-out;
+    /* La durée peut être surchargée dynamiquement en JS via animation-duration */
+}
+
+.shake-animation::before {
+    animation: shake 0.5s ease-in-out;
+    /* La durée peut être surchargée dynamiquement en JS via animation-duration */
+}
+
 header {
     text-align: center;
     margin-bottom: 40px;
